<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentProfileActivity">

    <ImageView
        android:id="@+id/studentImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/student_image"
        android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/studentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id" />

        <TextView
            android:id="@+id/studentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:id="@+id/studentGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <TextView
            android:id="@+id/studentClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sClass" />

        <TextView
            android:id="@+id/studentGpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpa" />

        <TextView
            android:id="@+id/studentEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id" />

        <TextView
            android:id="@+id/studentMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id" />
</LinearLayout>